samples/_failures_safe/1761299006_751e60_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_db2cb862.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_db2cb862.c:147: error: expected ‘{’ at end of input
